deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: find-moj-data-service
  namespace: ${NAMESPACE}
  labels:
    app: find-moj-data
spec:
  selector:
    app: find-moj-data # this should match the pod label in deployment.yml
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
