deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-moj-data-ingress-${ENV}
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: find-moj-data-ingress-${ENV}-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/limit-whitelist: ${LIMIT_WHITELIST}
    nginx.ingress.kubernetes.io/limit-rps: "200"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRule REQUEST_URI "@contains .profile" "id:1005,phase:1,t:lowercase,ctl:ruleRemoveById=930130"
      SecRule REQUEST_URI "@contains nomis_internet" "id:1006,phase:2,t:none,nolog,pass,ctl:ruleRemoveById=933150"
      SecRule REQUEST_URI "@contains performance_kpis_intermediate" "id:1007,phase:2,t:none,nolog,pass,ctl:ruleRemoveById=933150"
      SecDefaultAction "phase:2,pass,log,tag:github_team=data-catalogue"
      SecDefaultAction "phase:4,pass,log,tag:github_team=data-catalogue"
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - ${EXTERNAL_DOMAIN_PREFIX}find-moj-data.service.justice.gov.uk
      secretName: find-moj-data-cert # pragma: allowlist secret
  rules:
    - host: ${EXTERNAL_DOMAIN_PREFIX}find-moj-data.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: find-moj-data-service # this should match the metadata.name in service.yml
                port:
                  number: 80
          # Route Prometheus metrics endpoint to a null service
          - path: /metrics
            pathType: ImplementationSpecific
            backend:
              service:
                name: blackhole
                port:
                  number: 80
